--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "concisedb",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A database library stores JSON file for Node.js.",
   "keywords": [
     "database",
@@ -17,8 +17,8 @@
   "main": "dist/index.js",
   "scripts": {
     "lint": "eslint .",
-    "build": "tsc",
-    "dev": "tsc && node dist/index.js"
+    "build": "webpack --mode=production",
+    "dev": "webpack --mode=development && node dist/index.js"
   },
   "bugs": {
     "url": "https://github.com/Rotten-LKZ/concisedb/issues"
@@ -28,6 +28,9 @@
     "@antfu/eslint-config": "^0.18.9",
     "@types/node": "^17.0.23",
     "eslint": "^8.12.0",
-    "typescript": "^4.6.3"
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.3",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
