--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "concisedb",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A database library stores JSON file for Node.js.",
   "keywords": [
     "database",
@@ -18,7 +18,8 @@
   "scripts": {
     "lint": "eslint .",
     "build": "webpack --mode=production",
-    "dev": "webpack --mode=development && node dist/index.js"
+    "dev": "webpack --mode=development && node dist/index.js",
+    "doc": "typedoc src/index.ts"
   },
   "bugs": {
     "url": "https://github.com/Rotten-LKZ/concisedb/issues"
@@ -29,6 +30,7 @@
     "@types/node": "^17.0.23",
     "eslint": "^8.12.0",
     "ts-loader": "^9.2.8",
+    "typedoc": "^0.22.13",
     "typescript": "^4.6.3",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
