--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "main": "dist/index.js",
   "scripts": {
     "lint": "eslint .",
+    "start": "node dist/index.js",
     "build": "webpack --mode=production",
     "dev": "webpack --mode=development && node dist/index.js",
     "doc": "typedoc src/index.ts"
