--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "concisedb",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A database library stores JSON file for Node.js.",
   "keywords": [
     "database",
@@ -20,8 +20,7 @@
     "start": "node dist/index.js",
     "build": "webpack --mode=production",
     "dev": "webpack --mode=development && node dist/index.js",
-    "doc": "typedoc src/index.ts",
-    "publish": "npm run build && npm publish"
+    "doc": "typedoc src/index.ts"
   },
   "bugs": {
     "url": "https://github.com/Rotten-LKZ/concisedb/issues"
