--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,19 +25,23 @@ jobs:
       - name: 🎉 Build docs
         run: |
           npm run docs
-
-      - name: ✨ Clone & Commit
+      
+      - name: ✨ Create SSH
+        env:
+          ID_RSA: ${{ secrets.ID_RSA }}
         run: |
-          git clone git@github.com:Rotten-LKZ/v0.concisedb.top.git
-          cp -r /docs /v0.concisedb.top
-          cd v0.concisedb.top
-          git config --global user.email Rotten_LKZ@163.com
-          git config --global user.name Rotten-LKZ
-          git add .
-          git commit -m "new docs[updated by bot]" -a
+          mkdir -p ~/.ssh/
+          echo "$ID_RSA" >> ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-      - name: 📂 Push
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.TOKEN }}
-          branch: main
+      - name: 📂 Commit & Push
+        run: |
+          git config --global user.name "Rotten-LKZ"
+          git config --global user.email "Rotten_LKZ@163.com"
+          git clone git@github.com:Rotten-LKZ/v0.concisedb.top.git
+          cp -r ./docs/* ./v0.concisedb.top
+          cd ./v0.concisedb.top
+          git add .
+          git commit -m "docs update[bot]" -a
+          git push
