--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "concisedb",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "A database library stores JSON file for Node.js.",
   "keywords": [
     "database",
@@ -20,7 +20,9 @@
     "start": "node dist/index.js",
     "build": "webpack --mode=production",
     "dev": "webpack --mode=development && node dist/index.js",
-    "docs": "typedoc src/index.ts"
+    "docs": "typedoc src/index.ts",
+    "test": "jest",
+    "test:c": "jest --coverage"
   },
   "bugs": {
     "url": "https://github.com/Rotten-LKZ/concisedb/issues"
@@ -28,8 +30,12 @@
   "homepage": "https://github.com/Rotten-LKZ/concisedb#readme",
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.9",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
+    "@types/webpack": "^5.28.0",
     "eslint": "^8.12.0",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.4",
     "ts-loader": "^9.2.8",
     "typedoc": "^0.22.13",
     "typescript": "^4.6.3",
