--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,13 +1,13 @@
-name: Deploy docs
+name: Calc coverage
 
 on:
   push:
     branches:
-      - docs-v0
+      - pub
 
 jobs:
   build:
-    name: 🍳 Build docs on node ${{ matrix.node_version }} and ${{ matrix.os }}
+    name:  Calc coverage on node ${{ matrix.node_version }} and ${{ matrix.os }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -22,26 +22,11 @@ jobs:
         run: |
           npm install
 
-      - name: 🎉 Build docs
+      - name: 🎉 Run test
         run: |
-          npm run docs
-      
-      - name: ✨ Create SSH
-        env:
-          ID_RSA: ${{ secrets.ID_RSA }}
-        run: |
-          mkdir -p ~/.ssh/
-          echo "$ID_RSA" >> ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          npm run test:c
 
-      - name: 📂 Commit & Push
-        run: |
-          git config --global user.name "Rotten-LKZ"
-          git config --global user.email "Rotten_LKZ@163.com"
-          git clone git@github.com:Rotten-LKZ/v0.concisedb.top.git
-          cp -r ./docs/* ./v0.concisedb.top
-          cd ./v0.concisedb.top
-          git add .
-          git commit -m "docs update[bot]" -a
-          git push
+      - name: ✨ Push to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          files: ./coverage/clover.xml
