fix: GitHub Actions: coverage.xml

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,4 +29,5 @@ jobs:
       - name: ✨ Push to Codecov
         uses: codecov/codecov-action@v2
         with:
+          directory: ./coverage/
           files: ./coverage/clover.xml
