--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start": "node dist/index.js",
     "build": "webpack --mode=production",
     "dev": "webpack --mode=development && node dist/index.js",
-    "docs": "typedoc src/index.ts",
+    "docs": "node ./utils/typedocGenerate.js && typedoc",
     "test": "jest",
     "test:c": "jest --coverage"
   },
