--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint .",
     "start": "node dist/index.js",
     "build": "webpack --mode=production",
+    "build:tsup": "tsup",
     "dev": "webpack --mode=development && node dist/index.js",
     "docs": "node ./utils/typedocGenerate.js && typedoc",
     "test": "jest",
@@ -32,14 +33,12 @@
     "@antfu/eslint-config": "^0.18.9",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
-    "@types/webpack": "^5.28.0",
     "eslint": "^8.12.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.2.8",
+    "tsup": "^5.12.4",
     "typedoc": "^0.22.13",
-    "typescript": "^4.6.3",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "typescript": "^4.6.3"
   }
 }
