--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "concisedb",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A database library stores JSON file for Node.js.",
   "keywords": [
     "database",
@@ -18,8 +18,7 @@
   "scripts": {
     "lint": "eslint .",
     "start": "node dist/index.js",
-    "build": "webpack --mode=production",
-    "build:tsup": "tsup",
+    "build": "tsup",
     "dev": "webpack --mode=development && node dist/index.js",
     "docs": "node ./utils/typedocGenerate.js && typedoc",
     "test": "jest",
